# Solana-Program-Trading-Bot

./: Anchor.toml  Cargo.toml  README.md
migrations/: deploy.ts
programs/on-chain-trading-bot/: Cargo.toml
programs/on-chain-trading-bot/src/: account_manager.rs  constants.rs  errors.rs  lib.rs  liquidity_manager.rs  math.rs  types.rs  utils.rs
programs/on-chain-trading-bot/src/arbitrage/: mod.rs
programs/on-chain-trading-bot/src/bot_strategy/: mod.rs
programs/on-chain-trading-bot/src/dex/: common.rs  jupiter.rs  mod.rs  raydium.rs  raydium_interface.rs  serum.rs
programs/on-chain-trading-bot/src/errors/: mod.rs
programs/on-chain-trading-bot/src/instructions/: airdrop.rs  close.rs  initialize.rs  mod.rs  setup_dca.rs
programs/on-chain-trading-bot/src/oracles/: mod.rs  raydium_oracle.rs
programs/on-chain-trading-bot/src/price_feeds/: mod.rs
programs/on-chain-trading-bot/src/risk/: mod.rs
programs/on-chain-trading-bot/src/state/: counter.rs  escrow.rs  mod.rs  pubkey_wrapper.rs
programs/on-chain-trading-bot/src/utils/: mod.rs  pubkey_ext.rs
tests/: on-chain-trading-bot.ts  trading-bot.ts
