[package]
name = "on-chain-trading-bot"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "on_chain_trading_bot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.0"
pyth-sdk-solana = "0.8.0"
solana-program = "1.18.0"
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "master", features = ["no-entrypoint"] }
raydium-contract = { git = "https://github.com/raydium-io/raydium-contract", features = ["no-entrypoint"] }
jupiter-core = { git = "https://github.com/jup-ag/jupiter-core", features = ["no-entrypoint"] }
